--- a/caen_tools/WebService/index.html
+++ b/caen_tools/WebService/index.html
@@ -1,10 +1,10 @@
-<button id="ping">Ping</button>
+<button id="down">Down</button>
 
 <script>
 
-    ping.onclick = async () => {
+    down.onclick = async () => {
         try {
-            const ticket_type = 'Ping';
+            const ticket_type = 'Down';
             const response = await fetch(`/set_ticket/${ticket_type}`, {
                 method: 'POST',
                 headers: {
